--- a/russh-keys/Cargo.toml
+++ b/russh-keys/Cargo.toml
@@ -50,17 +50,17 @@ log = "0.4"
 md5 = "0.7"
 num-bigint = "0.4"
 num-integer = "0.1"
-openssl = { version = "0.10", optional = true }
 p256 = "0.13"
 p384 = "0.13"
 p521 = "0.13"
 pbkdf2 = "0.11"
 rand = "0.8"
 rand_core = { version = "0.6.4", features = ["std"] }
+rsa = "0.9"
 russh-cryptovec = { version = "0.7.0", path = "../cryptovec" }
 serde = { version = "1.0", features = ["derive"] }
-sha1 = "0.10"
-sha2 = "0.10"
+sha1 = { version = "0.10", features = ["oid"] }
+sha2 = { version = "0.10", features = ["oid"] }
 thiserror = "1.0"
 tokio = { version = "1.17.0", features = [
   "io-util",
@@ -72,12 +72,6 @@ tokio-stream = { version = "0.1", features = ["net"] }
 typenum = "1.17"
 yasna = { version = "0.5.0", features = ["bit-vec", "num-bigint"] }
 
-[features]
-vendored-openssl = ["openssl", "openssl/vendored"]
-
 [dev-dependencies]
 env_logger = "0.10"
 tempdir = "0.3"
-
-[package.metadata.docs.rs]
-features = ["openssl"]
