--- a/russh/Cargo.toml
+++ b/russh/Cargo.toml
@@ -14,8 +14,6 @@ rust-version = "1.65"
 
 [features]
 default = ["flate2"]
-openssl = ["russh-keys/openssl", "dep:openssl"]
-vendored-openssl = ["openssl/vendored", "russh-keys/vendored-openssl"]
 
 [dependencies]
 aes = "0.8"
@@ -34,8 +32,8 @@ generic-array = "0.14"
 hmac = "0.12"
 log = "0.4"
 once_cell = "1.13"
-openssl = { version = "0.10", optional = true }
 rand = "0.8"
+rsa = "0.9"
 russh-cryptovec = { version = "0.7.0", path = "../cryptovec" }
 russh-keys = { version = "0.43.0", path = "../russh-keys" }
 sha1 = "0.10"
@@ -74,6 +72,3 @@ shell-escape = "0.1"
 tokio-fd = "0.3"
 termion = "2"
 ratatui = "0.26.0"
-
-[package.metadata.docs.rs]
-features = ["openssl"]
